[project]
name = "gpt-mcp-toolcaller-gradio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.8.1",
    "gradio>=5.34.2",
    "mcp[cli]>=1.9.4",
    "notion-client>=2.4.0",
    "openai>=1.90.0",
    "requests>=2.32.4",
]
